working on mobile issue

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ img {
   color: white;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 380px) {
   h1 {
     font-size: 40px;
   }
